--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -15,6 +15,7 @@
     margin: 6px 0px;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .projectRow a {
